--- a/code/dev/parts/profile/two-factor-auth.html
+++ b/code/dev/parts/profile/two-factor-auth.html
@@ -51,8 +51,8 @@
               </div>
             </div>
             <div class="col-md-6">
-              <span class="label label-success" ng-if="twoFAEnabled">Enabled</span>
-              <span class="label label-danger" ng-if="!twoFAEnabled">Disabled</span>
+              <span class="label label-success" ng-if="twoFAEnabled" tooltip="Two Factor Authentication is Enabled">Enabled</span>
+              <span class="label label-danger" ng-if="!twoFAEnabled" tooltip="Two Factor Authentication is Disabled.">Disabled</span>
             </div>
           </div>
 
