--- a/code/dev/parts/reports/charts/mobile-hits.html
+++ b/code/dev/parts/reports/charts/mobile-hits.html
@@ -23,7 +23,7 @@
 <h3 style="margin-top: 0;">Hits</h3>
 
 <div class="alert alert-info" ng-if="!_loading && !traffic.labels.length">
-  No data to display
+  <p align="center">No data to display</p>
 </div>
 <div class="alert alert-info" ng-if="_loading">
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
