--- a/code/dev/parts/reports/mobile-distributions.html
+++ b/code/dev/parts/reports/mobile-distributions.html
@@ -54,7 +54,7 @@
               <h3>Origin/RevAPM Traffic Distribution By Requests</h3>
 
               <div class="alert alert-info" ng-hide="_loading || destination_hits.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -66,7 +66,7 @@
             <div class="col-md-6">
               <h3>Origin/RevAPM Traffic Distribution By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || destination_gbt.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -82,7 +82,7 @@
             <div class="col-md-6">
               <h3>RevAPM Transport Protocol Distribution By Requests</h3>
               <div class="alert alert-info" ng-hide="_loading || transport_hits.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -94,7 +94,7 @@
             <div class="col-md-6">
               <h3>RevAPM Transport Protocol Distribution By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || transport_gbt.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -110,7 +110,7 @@
             <div class="col-md-6">
               <h3>Request Completion Status Distribution By Requests</h3>
               <div class="alert alert-info" ng-hide="_loading || status_hits.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -122,7 +122,7 @@
             <div class="col-md-6">
               <h3>Request Completion Status Distribution By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || status_gbt.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -138,7 +138,7 @@
             <div class="col-md-6">
               <h3>Edge Cache Hit Ratio By Requests</h3>
               <div class="alert alert-info" ng-hide="_loading || cache_hits.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -150,7 +150,7 @@
             <div class="col-md-6">
               <h3>Edge Cache Hit Ratio By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || cache_gbt.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
