--- a/code/dev/parts/reports/mobile-tops.html
+++ b/code/dev/parts/reports/mobile-tops.html
@@ -54,7 +54,7 @@
               <h3>Top 20 Countries By Requests</h3>
 
               <div class="alert alert-info" ng-hide="_loading || country_hits.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -66,7 +66,7 @@
             <div class="col-md-6">
               <h3>Top 20 Countries By Users</h3>
               <div class="alert alert-info" ng-hide="_loading || country_users.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -83,7 +83,7 @@
             <div class="col-md-6">
               <h3>Top 20 Countries By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || country_gbt.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -95,7 +95,7 @@
             <div class="col-md-6">
               <h3>Top 10 OSes By Requests</h3>
               <div class="alert alert-info" ng-hide="_loading || os_hits.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -111,7 +111,7 @@
             <div class="col-md-6">
               <h3>Top 10 OSes By Users</h3>
               <div class="alert alert-info" ng-hide="_loading || os_users.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -123,7 +123,7 @@
             <div class="col-md-6">
               <h3>Top 10 OSes By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || os_gbt.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -139,7 +139,7 @@
             <div class="col-md-6">
               <h3>Top 20 Devices By Requests</h3>
               <div class="alert alert-info" ng-hide="_loading || device_hits.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -151,7 +151,7 @@
             <div class="col-md-6">
               <h3>Top 20 Devices By Users</h3>
               <div class="alert alert-info" ng-hide="_loading || device_users.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -167,7 +167,7 @@
             <div class="col-md-6">
               <h3>Top 20 Devices By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || device_gbt.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -179,7 +179,7 @@
             <div class="col-md-6">
               <h3>Top 20 Providers By Requests</h3>
               <div class="alert alert-info" ng-hide="_loading || operator_hits.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -195,7 +195,7 @@
             <div class="col-md-6">
               <h3>Top 20 Providers By Users</h3>
               <div class="alert alert-info" ng-hide="_loading || operator_users.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -207,7 +207,7 @@
             <div class="col-md-6">
               <h3>Top 20 Providers By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || operator_gbt.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -223,7 +223,7 @@
             <div class="col-md-6">
               <h3>WiFi/Cellular Distribution By Requests</h3>
               <div class="alert alert-info" ng-hide="_loading || network_hits.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -235,7 +235,7 @@
             <div class="col-md-6">
               <h3>WiFi/Cellular Distribution By Users</h3>
               <div class="alert alert-info" ng-hide="_loading || network_users.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -251,7 +251,7 @@
             <div class="col-md-6">
               <h3>WiFi/Cellular Distribution By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || network_gbt.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -263,7 +263,7 @@
             <div class="col-md-6">
               <h3>Top 10 Domains By Requests</h3>
               <div class="alert alert-info" ng-hide="_loading || domain_hits.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -279,7 +279,7 @@
             <div class="col-md-6">
               <h3>Top 10 Domains By Traffic</h3>
               <div class="alert alert-info" ng-hide="_loading || domain_gbt.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
@@ -291,7 +291,7 @@
             <div class="col-md-6">
               <h3>Top 10 HTTP Status Codes</h3>
               <div class="alert alert-info" ng-hide="_loading || status_code_hits.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div class="alert alert-info" ng-hide="!_loading">
                 <i class="glyphicon glyphicon-refresh spin"></i>&nbsp; Loading
