--- a/code/dev/parts/reports/top-reports.html
+++ b/code/dev/parts/reports/top-reports.html
@@ -90,7 +90,7 @@
               <h3>HTTP/HTTPS Requests Ratio</h3>
 
               <div class="alert alert-info" ng-if="!protocol || !protocol.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div ng-hide="!protocol || !protocol.length">
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="protocol"></div>
@@ -100,7 +100,7 @@
               <h3>Top 10 Countries</h3>
 
               <div class="alert alert-info" ng-if="!country || !country.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div ng-hide="!country || !country.length">
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="country"></div>
@@ -113,7 +113,7 @@
               <h3>HTTP Methods</h3>
 
               <div class="alert alert-info" ng-if="!httpMethod || !httpMethod.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div ng-hide="!httpMethod || !httpMethod.length">
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="httpMethod"></div>
@@ -123,7 +123,7 @@
               <h3>Top 10 HTTP Content Types</h3>
 
               <div class="alert alert-info" ng-if="!contentType || !contentType.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div ng-hide="!contentType || !contentType.length">
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="contentType"></div>
@@ -136,7 +136,7 @@
               <h3>Top 10 OS</h3>
 
               <div class="alert alert-info" ng-if="!os || !os.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div ng-hide="!os || !os.length">
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="os"></div>
@@ -146,7 +146,7 @@
               <h3>Top 10 Devices</h3>
 
               <div class="alert alert-info" ng-if="!device || !device.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div ng-hide="!device || !device.length">
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="device"></div>
@@ -160,7 +160,7 @@
               <h3>QUIC/Non-QUIC Ratio</h3>
 
               <div class="alert alert-info" ng-if="!quic || !quic.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div ng-hide="!quic || !quic.length">
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="quic"></div>
@@ -170,7 +170,7 @@
               <h3>H2/H2C/Non-HTTP2 Ratio</h3>
 
               <div class="alert alert-info" ng-if="!http2 || !http2.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div ng-hide="!http2 || !http2.length">
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="http2"></div>
@@ -184,7 +184,7 @@
               <h3>Request Completion Success/Failure Ratio</h3>
 
               <div class="alert alert-info" ng-if="!requestStatus || !requestStatus.length">
-                No data to display
+                <p align="center">No data to display</p>
               </div>
               <div ng-hide="!requestStatus || !requestStatus.length">
                 <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="requestStatus"></div>
