Pace, tooltips, "No Data To Display" centered commit

--- a/code/dev/parts/reports/edge-cache.html
+++ b/code/dev/parts/reports/edge-cache.html
@@ -35,7 +35,7 @@
                             <div class="col-sm-12 nd-block">
                                 <h3>Edge Cache Hit/Miss Ratio</h3>
                                 <div class="alert alert-info" ng-if="!cacheStatus || !cacheStatus.length">
-                                    No data to display
+                                  <p align="center">No data to display</p>
                                 </div>
                                 <div ng-hide="!cacheStatus || !cacheStatus.length">
                                     <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="cacheStatus"></div>
