--- a/code/dev/parts/reports/general.html
+++ b/code/dev/parts/reports/general.html
@@ -67,7 +67,7 @@
                             <div class="col-sm-12 nd-block">
                                 <h3>HTTP/HTTPS Requests Ratio</h3>
                                 <div class="alert alert-info" ng-if="!protocol || !protocol.length">
-                                    No data to display
+                                  <p align="center">No data to display</p>
                                 </div>
                                 <div ng-hide="!protocol || !protocol.length">
                                     <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="protocol"></div>
@@ -78,7 +78,7 @@
                             <div class="col-sm-12 nd-block">
                                 <h3>Edge Cache Hit/Miss Ratio</h3>
                                 <div class="alert alert-info" ng-if="!cacheStatus || !cacheStatus.length">
-                                    No data to display
+                                  <p align="center">No data to display</p>
                                 </div>
                                 <div ng-hide="!cacheStatus || !cacheStatus.length">
                                     <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="cacheStatus"></div>
@@ -89,7 +89,7 @@
                             <div class="col-sm-12 nd-block">
                                 <h3>HTTP Methods</h3>
                                 <div class="alert alert-info" ng-if="!httpMethod || !httpMethod.length">
-                                    No data to display
+                                  <p align="center">No data to display</p>
                                 </div>
                                 <div ng-hide="!httpMethod || !httpMethod.length">
                                     <div style="min-width: 480px; min-height: 350px" pie-chart ng-data="httpMethod"></div>
