--- a/code/dev/parts/reports/top/top-404.html
+++ b/code/dev/parts/reports/top/top-404.html
@@ -7,7 +7,7 @@
      ng-filters="filters"
      on-filter="loadDetails()"></div>
 <div class="alert alert-info" ng-if="!_loading && !data.labels.length">
-  No data to display
+  <p align="center">No data to display</p>
 </div>
 <div class="alert alert-info" ng-if="_loading">
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
