Pace, tooltips, "No Data To Display" centered commit

--- a/code/dev/parts/users/edit.html
+++ b/code/dev/parts/users/edit.html
@@ -162,7 +162,7 @@
               <div disable-two-factor-auth ng-user-id="params.id"></div>
             </div>
             <br />
-            <h6 onFocus="this.value=''">Go to Security Settings to Enable Two Factor Authentication.</h6>
+            <h6 >&nbsp;	&nbsp;	&nbsp; &nbsp; &nbsp;	Go to Security Settings to Enable Two Factor Authentication.</h6>
           </div>
           <hr>
 
