--- a/code/index.html
+++ b/code/index.html
@@ -8,6 +8,7 @@
   <title>RevAPM Customer Portal</title>
 
   <!-- Bootstrap -->
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;lang=en" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;lang=en" rel="stylesheet">
   <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="bower_components/jsoneditor/dist/jsoneditor.css" rel="stylesheet">
