--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -26,6 +26,7 @@
       <div class="panel-body">
         <form class="form-horizontal">
           <div class="form-group">
+            <form name="myform">
             <label for="email"
                    popover-append-to-body="{{true}}"
                    class="col-sm-2 control-label"
@@ -39,7 +40,10 @@
                      id="email"
                      placeholder="Email"
                      ng-model="model.email"
-                     ng-disabled="_loading">
+                     ng-disabled="_loading"
+                      required />
+              <span ng-show="myForm.email.$error.required && myForm.email.$dirty">required</span>
+              <span ng-show="!myForm.email.$error.required && myForm.email.$error.email && myForm.email.$dirty">invalid email</span>
             </div>
           </div>
           <div class="form-group">
@@ -47,9 +51,6 @@
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="First name">First Name</label>
-
-              <span ng-show="!!myform.username.$error.isBlank">Email Required.</span>
-              <span ng-show="!!myform.username.$error.invalidChars">Example: Example@Exmple.com</span>
 
             <div class="col-sm-10">
               <input type="text"
