Build for testing changes

--- a/code/parts/signup/end.html
+++ b/code/parts/signup/end.html
@@ -23,7 +23,7 @@
             <div class="col-md-12">
               <!-- TODO: edit the text-->
               <p class="lead">
-                Thank you for completing the sign-up process. When you get email with information about ready your account - you will be can login.
+                Thank you for completing the sign-up process. When you get email with information about ready your account - you can login.
                 <!--   In a few seconds you will be redirected to our customer portal login page where you can log in using your freshly created username (email) and password. -->
               </p>
             </div>
