Set USA as the default country on the signup page.

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -151,6 +151,7 @@
 <script type="text/javascript" src="js/portal/auth/block/blockUserLoginLogout.directive.js"></script>
 
 <script type="text/javascript" src="js/portal/signup/signup.module.js"></script>
+<script type="text/javascript" src="js/portal/signup/controller/signupBillingPlans.controller.js"></script>
 <script type="text/javascript" src="js/portal/signup/controller/signup.controller.js"></script>
 <script type="text/javascript" src="js/portal/signup/controller/verify.controller.js"></script>
 <script type="text/javascript" src="js/portal/signup/signup.routes.js"></script>
