--- a/code/dev/parts/profile/edit-company.html
+++ b/code/dev/parts/profile/edit-company.html
@@ -153,7 +153,7 @@
                 </textarea>
               </div>
             </div>
-            <!-- 
+            <!--
             <div class="form-group" ng-if="model.billing_id && (userService.isReseller() || userService.isRevadmin())">
               <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Billing plan">Billing Plan</label>
               <div class="col-sm-10">
@@ -271,7 +271,7 @@
                 </button>
                 <!-- TODO: Need to disable "Edit Billing Profile" button if the billing profile is not active
                                 // TODO: in Chargify  -->
-                <a ng-if="model.billing_id" ng-if="!!model.billing_portal_link.url && !!model.subscription_id" href="{{model.billing_portal_link.url}}" class="btn btn-primary" target="_blank" ng-disabled="_loading || _disabled">
+                <a ng-if="model.billing_id && !!model.billing_portal_link.url && !!model.subscription_id" href="{{model.billing_portal_link.url}}" class="btn btn-primary" target="_blank" ng-disabled="_loading || _disabled" popover-trigger="mouseenter" popover="Click here to update your payment details - you will be taken to our billing portal which uses a separate URL">
                   <i class="glyphicon glyphicon-lock"></i> Update Payment Profile</a>
                 <!-- Create Billing Profile -->
                 <a href="" class="btn btn-primary" ng-if="!model.billing_id && (userService.isRevadmin() || userService.isReseller())" ng-click="createBillingProfile(model)">
