Fixes in signup process

--- a/code/dev/parts/profile/billing.html
+++ b/code/dev/parts/profile/billing.html
@@ -107,7 +107,7 @@
                     <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i> Subscribe
                   </button>
                   <button ng-show="item.id === account.plan_id" ng-click="chooseBillingPlan(item.id, account)" class="btn btn-success btn-lg" disabled>
-                    <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i> Current Plan
+                    <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i> Your Current Plan
                   </button>
                 </footer>
               </div>
