--- a/code/parts/signup/email_sent.html
+++ b/code/parts/signup/email_sent.html
@@ -24,7 +24,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <p class="lead">
-                                We have sent an email with verification link to <b>{{user.email}}</b> - please continue the RevAPM registration process by following the link.
+                                We have sent an email with verification link to <b>{{user.email}}</b> - please continue the RevAPM registration process by following the link. Please also check your Spam mailbox.
                             </p>
                         </div>
                     </div>
