--- a/code/parts/signup/end.html
+++ b/code/parts/signup/end.html
@@ -16,15 +16,15 @@
           </div>
         </div>
         <div class="panel-heading">
-          <h4>Signup process is complete</h4>
+          <h4>Your are almost there!</h4>
         </div>
         <div class="panel-body">
           <div class="row">
             <div class="col-md-12">
               <!-- TODO: edit the text-->
               <p class="lead">
-                Thank you for completing the sign-up process. When you get email with information about ready your account - you can login.
-                <!--   In a few seconds you will be redirected to our customer portal login page where you can log in using your freshly created username (email) and password. -->
+                Thank you for providing necessary user and payment information. Once we will complete the setting of your new account you will receive a welcome email, 
+                and after that you should be able to login to our customer portal using specified credentials.
               </p>
             </div>
           </div>
