--- a/code/parts/signup/form-contact-info.tpl.html
+++ b/code/parts/signup/form-contact-info.tpl.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-md-12">
         <p class="lead">
-          We have sent an email with instructions to your email <b>{{$ctrl.model.email}}</b>
+          We have sent an email with instructions to your email <b>{{$ctrl.model.email}}</b> - please continue the RevAPM registration process by following the link. Please also check your Spam mailbox.
         </p>
       </div>
     </div>
