--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -49,7 +49,11 @@
 <!--<link href="bower_components/PACE/themes/red/pace-theme-minimal.css" rel="stylesheet">-->
 <script>
   paceOptions = {
-    ajax: true, // disabled
+    ajax: {
+      trackMethods: ['GET', 'POST'],
+      trackWebSockets: false,
+      ignoreURLs : ['/config_status/']
+    }, // disabled
     document: true, // disabled
     eventLag: false, // disabled
     elements: {
@@ -107,7 +111,10 @@
 <script type="text/javascript" src="bower_components/angular-daterangepicker/js/angular-daterangepicker.js"></script>
 <script type="text/javascript" src="bower_components/angular-bootstrap-toggle-switch/angular-toggle-switch.js"></script>
 <script type="text/javascript" src="bower_components/angular-clipboard/angular-clipboard.js"></script>
-
+<link href='https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto|Open+Sans|Slabo+27px|Lato|Oswald|Roboto+Condensed|Montserrat|Source+Sans+Pro|Lora|Raleway|PT+Sans|Droid+Sans|Open+Sans+Condensed:300|Ubuntu|Titillium+Web|Noto+Sans|PT+Sans+Narrow|Merriweather|Fjalla+One|PT+Serif|Alegreya+Sans' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css" type="text/css"/>
+<script src="bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
+<script src="bower_components/ng-scrollbars/dist/scrollbars.min.js"></script>
 
 <script src="config.js"></script>
 
