--- a/code/parts/users/new.html
+++ b/code/parts/users/new.html
@@ -1,3 +1,8 @@
+<html>
+<head>
+
+</head>
+<body>
 <div class="row">
   <div class="col-sm-12">
     <h2 class="pull-left page-title">
@@ -24,22 +29,26 @@
 
       </div>
       <div class="panel-body">
-        <form class="form-horizontal">
-          <div class="form-group">
-            <label for="email"
+        <form name="newForm" class="form-horizontal">
+          <pre>{{newForm}}</pre>
+          <div class="control-group" ng-class="{true: 'error'}[newForm.email.$invalid]">
+            <label class="control-label" for="email"
                    popover-append-to-body="{{true}}"
                    class="col-sm-2 control-label"
                    popover-trigger="mouseenter"
                    popover="New user's email address - the address should be unique across the system">Email</label>
 
-            <div class="col-sm-10">
+            <div class="col-sm-10, controls">
               <input type="email"
                      autofocus
                      class="form-control"
                      id="email"
                      placeholder="Email"
                      ng-model="model.user_email"
-                     ng-disabled="_loading">
+                     ng-disabled="_loading"
+                      required="required">
+              <span class="help-inline" ng-show=" newForm.email.$error.required">Required</span>
+              <span class="help-inline" ng-show=" newForm.email.$error.email">Invalid email</span>
             </div>
           </div>
           <div class="form-group">
