Build production Code.

--- a/code/parts/users/edit.html
+++ b/code/parts/users/edit.html
@@ -161,6 +161,8 @@
             <div class="col-sm-10">
               <div disable-two-factor-auth ng-user-id="params.id"></div>
             </div>
+            <br />
+            <h6 >&nbsp;	&nbsp;	&nbsp; &nbsp; &nbsp;	Go to Security Settings to Enable Two Factor Authentication.</h6>
           </div>
           <hr>
 
