--- a/code/index.html
+++ b/code/index.html
@@ -8,8 +8,8 @@
   <title>RevAPM Customer Portal</title>
 
   <!-- Bootstrap -->
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;lang=en" rel="stylesheet">
-  <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;lang=en" rel="stylesheet">
+
+  <link href="bower_components/PACE/themes/orange/pace-theme-minimal.css" rel="stylesheet">
   <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="bower_components/jsoneditor/dist/jsoneditor.css" rel="stylesheet">
   <link href="bower_components/angular-chart.js/dist/angular-chart.min.css" rel="stylesheet">
@@ -45,6 +45,22 @@
 <alert-list></alert-list>
 <div ui-view="layout" class="layout"></div>
 
+<script type="text/javascript" src="bower_components/PACE/pace.js"></script>
+<!--<link href="bower_components/PACE/themes/red/pace-theme-minimal.css" rel="stylesheet">-->
+<script>
+  paceOptions = {
+    ajax: {
+      trackMethods: ['GET', 'POST'],
+      trackWebSockets: false,
+      ignoreURLs : ['/config_status/']
+    }, // disabled
+    document: true, // disabled
+    eventLag: false, // disabled
+    elements: {
+      selectors: ['.my-page']
+    }
+  };
+</script>
 
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
@@ -95,7 +111,10 @@
 <script type="text/javascript" src="bower_components/angular-daterangepicker/js/angular-daterangepicker.js"></script>
 <script type="text/javascript" src="bower_components/angular-bootstrap-toggle-switch/angular-toggle-switch.js"></script>
 <script type="text/javascript" src="bower_components/angular-clipboard/angular-clipboard.js"></script>
-
+<link href='https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto|Open+Sans|Slabo+27px|Lato|Oswald|Roboto+Condensed|Montserrat|Source+Sans+Pro|Lora|Raleway|PT+Sans|Droid+Sans|Open+Sans+Condensed:300|Ubuntu|Titillium+Web|Noto+Sans|PT+Sans+Narrow|Merriweather|Fjalla+One|PT+Serif|Alegreya+Sans' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css" type="text/css"/>
+<script src="bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
+<script src="bower_components/ng-scrollbars/dist/scrollbars.min.js"></script>
 
 <script src="config.js"></script>
 
