--- a/code/parts/auth/2fa/disable-two-factor-auth.html
+++ b/code/parts/auth/2fa/disable-two-factor-auth.html
@@ -31,6 +31,6 @@
     </button>
   </form>
   <div class="ng-cloak" ng-hide="twoFactorAuthEnabled">
-    <span class="label label-danger">Disabled</span>
+    <span class="label label-danger" tooltip="Two Factor Authentication is Disabled.">Disabled</span>
   </div>
 </div>
