--- a/code/parts/reports/charts/fbt-distribution.html
+++ b/code/parts/reports/charts/fbt-distribution.html
@@ -49,7 +49,7 @@
 </div>
 
 <div class="alert alert-info" ng-if="!_loading && (!ngDomain || !traffic.labels.length)">
-  No data to display
+  <p align="center">No data to display</p>
 </div>
 <div class="alert alert-info" ng-if="_loading">
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
