--- a/code/parts/reports/charts/mobile-base-top-objects.html
+++ b/code/parts/reports/charts/mobile-base-top-objects.html
@@ -22,7 +22,7 @@
 
 <div ng-if="!_loading">
   <div class="alert alert-info" ng-if="!items.length">
-    No data to display
+    <p align="center">No data to display</p>
   </div>
 
   <div ng-hide="!items.length">
