--- a/code/parts/reports/charts/request-status.html
+++ b/code/parts/reports/charts/request-status.html
@@ -7,7 +7,7 @@
      ng-filters="filters"
      on-filter="reload()"></div>
 <div class="alert alert-info" ng-if="!_loading && (!ngDomain || !traffic.labels.length)">
-  No data to display
+  <p align="center">No data to display</p>
 </div>
 <div class="alert alert-info" ng-if="_loading">
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
