--- a/code/parts/reports/top/top-5xx.html
+++ b/code/parts/reports/top/top-5xx.html
@@ -8,7 +8,7 @@
      ng-filters="filters"
      on-filter="loadDetails()"></div>
 <div class="alert alert-info" ng-if="!_loading && !codes.length">
-  No data to display
+  <p align="center">No data to display</p>
 </div>
 <div class="alert alert-info" ng-if="_loading">
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
