--- a/code/dev/parts/profile/edit-company.html
+++ b/code/dev/parts/profile/edit-company.html
@@ -154,7 +154,7 @@
               </div>
             </div>
             <div class="form-group" ng-if="model.billing_id && model.subscription_id">
-              <p class="col-md-12 text text-center"> To update your billing address and company name (as they will appears on your RevAPM statements) please click on “Update Payment Profile” button and provide the billing information together with credit card details</p>
+              <p class="col-md-12 text text-center"> To update your billing address and company name (as they will appears on your RevAPM statements) please click on “Update Payment Profile” button and provide the billing information together with credit card details.</p>
             </div>
             <!--
             <div class="form-group" ng-if="model.billing_id && (userService.isReseller() || userService.isRevadmin())">
